--- a/style.css
+++ b/style.css
@@ -1,12 +1,58 @@
-#top-nav .btn.btn-primary{
+#two-nav .btn.btn-primary {
     width: 60px;
-    height: 40px;
+    height: 38px;
     background-color: #005288;
-    
+    border-radius: 0px;
+    margin: 0px;
 }
 
-#top-nav .search-bar {
-    height: 40px;
+#two-nav .search-bar {
+    height: 35px;
     padding: 0px;
-    width: 500px;
+    width: 450px;
+}
+
+#two-nav .left {
+    margin-right: 50px;
+}
+
+
+#one-nav .btn.btn-primary {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: small;
+    padding: 0.4rem 3.0rem;
+    border-color: white;
+    border-radius: 5px;
+}
+
+#three-nav .dropdown{
+    color: white;
+}
+
+#three-nav {
+    background-color: #005288;
+    color: white;
+    padding: 0.5rem;
+    margin-top: 5px 
+}
+
+#four-nav {
+    font-size: small;
+    padding: 0.1rem;
+}
+
+#four-nav i {
+    color: #1577a2;
+}
+
+.grad-background {
+  background: url('cam_blue_hero_background.jpg') no-repeat center center fixed;
+  background-size: cover;
+  height: 700px;
+}
+
+#middle {
+    color: white;
+    font-family: arial;
+    font-size: small;
 }
