--- a/style.css
+++ b/style.css
@@ -53,6 +53,29 @@
 
 #middle {
     color: white;
-    font-family: arial;
+    font-family: sans-serif;
     font-size: small;
+}
+
+#middle h5 {
+    font-size: 16.75px;
+    line-height: 1.75;
+    font-family: sans-serif;
+    margin-top: 20px;
+}
+
+#middle h2 {
+    line-height: 1.3;
+    font-family: sans-serif;
+}
+
+#middle .btn.btn-primary {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: small;
+    padding: 0.4rem 2.0rem;
+    border-color: white;
+    border-radius: 0px;
+    font-family: sans-serif;
+    background-color: #1577a2;
+    margin-top: 20px;
 }
